sumo/tests/netconvert/errors/xml_false_edg/errors.netconvert.exe
Error: File 'hokkaido2.edg.xml' does not exist.
Error: No edges loaded.
Quitting (conversion failed).
